==> cpingan787/cxl/duola_cv01_tr2/tviibe1m/source/hal/source/mpuHal.c <==
#include "FreeRTOS.h"
#include "queue.h"
#include "crc8_16_32.h"
#include "cy_project.h"
#include "logHal.h"
#include "mpuHal.h"
#define MPU_COMMUNICATION_USE_SPI               0
#define MPU_HAL_PDMA_DW_TX                      DW1
#define MPU_HAL_PDMA_DW_CHANNEL_TX              14
#define MPU_HAL_PDMA_DW_RX    DW1
#define MPU_HAL_PDMA_DW_CHANNEL_RX              15
#define MPU_HAL_SPI_CHANNEL                    SCB3
#define SCB_SPI_OVERSAMPLING                  8
#define MPU_HAL_HANDLE_INSTANSE_MAX           15
#define MPU_PROTOCAL_HEADER_LEN                8
#define MPU_HAL_TX_BUFFER                     4096
#define MPU_HAL_RX_BUFFER                     4096
#define MPU_HAL_UART_CHANNEL                    SCB4
#define E_UART_RX_INTR_FACTER     (                              \
                                 CY_SCB_UART_RX_TRIGGER      |   \
                               /*CY_SCB_UART_RX_NOT_EMPTY    | */\
                               /*CY_SCB_UART_RX_FULL         | */\
                                 CY_SCB_UART_RX_OVERFLOW     |   \
                                 CY_SCB_UART_RX_UNDERFLOW    |   \
                                 CY_SCB_UART_RX_ERR_FRAME    |   \
                                 CY_SCB_UART_RX_ERR_PARITY   |   \
                                 CY_SCB_UART_RX_BREAK_DETECT |   \
                                 0                               \
                                )

static void MpuHalGpioInit(void)
{
    cy_stc_gpio_pin_config_t portPinCfg =
    {
        .outVal    = 0ul,
        .driveMode = CY_GPIO_DM_STRONG_IN_OFF,
        .hsiom     = P23_7_GPIO,
        .intEdge   = 0ul,
        .intMask   = 0ul,
        .vtrip     = 0ul,
        .slewRate  = 0ul,
        .driveSel  = 0ul,
    };
    /********power en **************************/
    Cy_GPIO_Pin_Init(GPIO_PRT23,7,&portPinCfg);
    /********power key***************************/
    portPinCfg.hsiom  = P12_3_GPIO;
    Cy_GPIO_Pin_Init(GPIO_PRT12,3,&portPinCfg);
    /********vbus***************************/
    portPinCfg.hsiom  = P0_0_GPIO;
    portPinCfg.outVal = 1u;
    Cy_GPIO_Pin_Init(GPIO_PRT0,0,&portPinCfg);
    /********wake  out***************************/
    portPinCfg.hsiom  = P19_3_GPIO;
    portPinCfg.outVal = 0u;
    Cy_GPIO_Pin_Init(GPIO_PRT19,3,&portPinCfg);
#if(MPU_COMMUNICATION_USE_SPI)    
    /********request  out************************/
    portPinCfg.hsiom  = P13_3_GPIO;
    Cy_GPIO_Pin_Init(GPIO_PRT13,3,&portPinCfg);
    /********spi miso***********************/
    portPinCfg.hsiom  = P13_0_SCB3_SPI_MISO;
    Cy_GPIO_Pin_Init(GPIO_PRT13,0,&portPinCfg);
    /********spi mosi***********************/
    portPinCfg.hsiom  = P13_1_SCB3_SPI_MOSI;
    Cy_GPIO_Pin_Init(GPIO_PRT13,1,&portPinCfg);
    /********spi clk***********************/
    portPinCfg.driveMode = CY_GPIO_DM_HIGHZ;
    portPinCfg.hsiom  = P13_2_SCB3_SPI_CLK;
    Cy_GPIO_Pin_Init(GPIO_PRT13,2,&portPinCfg);    
#else /**** *use uart commnication**************/
    
    /********spi miso***********************/
    portPinCfg.driveMode = CY_GPIO_DM_HIGHZ;
    portPinCfg.hsiom  = P6_0_SCB4_UART_RX;
    Cy_GPIO_Pin_Init(GPIO_PRT6,0,&portPinCfg);
    /********spi mosi***********************/
    portPinCfg.driveMode = CY_GPIO_DM_STRONG_IN_OFF;
    portPinCfg.hsiom  = P6_1_SCB4_UART_TX;
    Cy_GPIO_Pin_Init(GPIO_PRT6,1,&portPinCfg);    
#endif
}

static void MpuDataDispatch(const uint8_t* pData,uint16_t length,uint8_t irq)
{
    uint16_t i,j,instanceMax;
    uint32_t data;
    BaseType_t xHigherPriorityTaskWoken = pdFALSE;
    MpuHalHandle_t* pHandleInstance;
    
    instanceMax = MPU_HAL_HANDLE_INSTANSE_MAX;
    for(i=0;i<instanceMax;i++)
    {
        pHandleInstance = g_mpuManage.rxHandle+ i;
        if((pHandleInstance->useFlag==1)&&(pHandleInstance->pDataBufferRx!=NULL))
        {
            if((pHandleInstance->useRxFilter==1)&&(pData[2]==pHandleInstance->rxFilterConfig.aid))
            {
                if((pData[3]>=pHandleInstance->rxFilterConfig.midMin)&&(pData[3]<=pHandleInstance->rxFilterConfig.midMax))
                {
                    /***** copy data to receive buffer*****************/
                    data = (pHandleInstance->rxIndexIn<<16);
                    for(j=0;j<length;j++)
                    {
                        pHandleInstance->pDataBufferRx[pHandleInstance->rxIndexIn] = pData[j];
                        pHandleInstance->rxIndexIn++;
                        if(pHandleInstance->rxIndexIn>=pHandleInstance->dataBufferSize)
                        {
                            pHandleInstance->rxIndexIn = 0;
                        }
                    }
                    /******** dispatch data*******************************************/
                    data += length;
                    if(irq)
                    {
                        xQueueSendFromISR(pHandleInstance->rxQueueHandle, &data, &xHigherPriorityTaskWoken );
                    }
                    else
                    {
                        xQueueSend(pHandleInstance->rxQueueHandle, &data,0 );
                    }
                }                                   
            }            
        }
    }
}

int16_t MpuHalSetRxBuffer(int16_t handle,uint8_t* pBuffer,uint32_t bufferSize)
{
    if((handle>=0)&&(handle<MPU_HAL_HANDLE_INSTANSE_MAX))
    {
        if(pBuffer!=NULL)
        {
            g_mpuManage.rxHandle[handle].rxQueueHandle = xQueueCreate(10,sizeof(uint32_t));
            g_mpuManage.rxHandle[handle].rxIndexIn = 0;
            g_mpuManage.rxHandle[handle].pDataBufferRx = pBuffer;
            g_mpuManage.rxHandle[handle].dataBufferSize = bufferSize;
            return MPU_HAL_STATUS_OK;
        }
        else
        {
            return MPU_HAL_STATUS_ERR;
        }        
    }
    else
    {
        return MPU_HAL_STATUS_ERR;
    }
}

int16_t MpuHalTransmit(int16_t handle,const MpuHalDataPack_t* pTxMsg)
{
    uint16_t crc,index;
    uint8_t packHeader[20];
    int16_t ret = MPU_HAL_STATUS_OK;
    
    if((handle>=0)&&(handle<MPU_HAL_HANDLE_INSTANSE_MAX))
    {
        if(pTxMsg!=NULL)
        {
            if(pTxMsg->dataLength<4000)
            {
                MpuPackHeader(packHeader,pTxMsg);
                crc = MpuPackGetCrc(packHeader,pTxMsg);
                __disable_irq();
                if((g_mpuManage.txBuffer[g_mpuManage.txBufferFlag].txLength+pTxMsg->dataLength)<(MPU_HAL_TX_BUFFER-MPU_PROTOCAL_HEADER_LEN-2))
                {
                    index = g_mpuManage.txBuffer[g_mpuManage.txBufferFlag].txLength;
                    memcpy(g_mpuManage.txBuffer[g_mpuManage.txBufferFlag].buffer+index,packHeader,MPU_PROTOCAL_HEADER_LEN);
                    index += MPU_PROTOCAL_HEADER_LEN;
                    memcpy(g_mpuManage.txBuffer[g_mpuManage.txBufferFlag].buffer+index,pTxMsg->pDataBuffer,pTxMsg->dataLength);
                    index += pTxMsg->dataLength;
                    g_mpuManage.txBuffer[g_mpuManage.txBufferFlag].buffer[index] = (crc>>8)&0xFF;
                    index++;
                    g_mpuManage.txBuffer[g_mpuManage.txBufferFlag].buffer[index] = crc&0xFF;
                    g_mpuManage.txBuffer[g_mpuManage.txBufferFlag].txLength = index;
                    MpuHalRequestIrqFun();
                } 
                else
                {
                    ret = MPU_HAL_STATUS_ERR;
                }
                __enable_irq();
            }
            else
            {
                ret = MPU_HAL_STATUS_ERR;
            }
        }
        else
        {
            ret = MPU_HAL_STATUS_ERR;
        }        
    }
    else
    {
        ret = MPU_HAL_STATUS_ERR;
    }
    return ret;
}

int16_t MpuHalTransmit(int16_t handle,const MpuHalDataPack_t* pTxMsg)
{
    static uint8_t sTxBuffer[MPU_HAL_TX_BUFFER];
    uint16_t crc,index;
    uint8_t packHeader[20];
    int16_t ret = MPU_HAL_STATUS_OK;

    if((handle>=0)&&(handle<MPU_HAL_HANDLE_INSTANSE_MAX))
    {
        if(pTxMsg!=NULL)
        {
            if(pTxMsg->dataLength<4000)
            {
                //taskENTER_CRITICAL(); 
                __disable_irq();
                MpuPackHeader(packHeader,pTxMsg);
                crc = MpuPackGetCrc(packHeader,pTxMsg);

                index = 0;
                memcpy(sTxBuffer+index,packHeader,MPU_PROTOCAL_HEADER_LEN);
                index += MPU_PROTOCAL_HEADER_LEN;
                memcpy(sTxBuffer+index,pTxMsg->pDataBuffer,pTxMsg->dataLength);
                index += pTxMsg->dataLength;
                sTxBuffer[index] = (crc>>8)&0xFF;
                index++;
                sTxBuffer[index] = crc&0xFF;
                index++;
                MpuUartTransmit(sTxBuffer,index);
                //taskEXIT_CRITICAL(); 
                __enable_irq();
            }
            else
            {
                ret = MPU_HAL_STATUS_ERR;
            }
        }
        else
        {
            ret = MPU_HAL_STATUS_ERR;
        }        
    }
    else
    {
        ret = MPU_HAL_STATUS_ERR;
    }
    return ret;
}

int16_t MpuHalReceive(int16_t handle,MpuHalDataPack_t* pRxMsg,uint32_t waitTime )
{
    uint16_t len,crc,crcRx,index,i;
    uint32_t data;
    uint8_t packHeader[MPU_PROTOCAL_HEADER_LEN];
    QueueHandle_t queHandle;
    int16_t ret = MPU_HAL_STATUS_OK;
    
    if((handle>=0)&&(handle<MPU_HAL_HANDLE_INSTANSE_MAX))
    {
        index = handle&0xFF;
        if(pRxMsg!=NULL)
        {
            queHandle = g_mpuManage.rxHandle[index].rxQueueHandle;
            if(xQueueReceive( queHandle, &data, waitTime)== pdPASS)
            {
                index = (data>>16)&0xFFFF;
                len = data&0xFFFF;
                if((pRxMsg->dataBufferSize+MPU_PROTOCAL_HEADER_LEN+2)>=len)
                {
                    /****receive header****************************/
                    for(i=0;i<MPU_PROTOCAL_HEADER_LEN;i++)
                    {
                         packHeader[i] = g_mpuManage.rxHandle[handle].pDataBufferRx[index];
                         index++;
                          if(index>=g_mpuManage.rxHandle[handle].dataBufferSize)
                          {
                              index = 0;
                          }
                    }
                    /*******receive service data**************************************/
                    for(i=0;i<(len-MPU_PROTOCAL_HEADER_LEN-2);i++)
                    {
                         pRxMsg->pDataBuffer[i] = g_mpuManage.rxHandle[handle].pDataBufferRx[index];
                         index++;
                          if(index>=g_mpuManage.rxHandle[handle].dataBufferSize)
                          {
                              index = 0;
                          }
                    }
                    pRxMsg->dataLength = len-MPU_PROTOCAL_HEADER_LEN-2;
                    crcRx = (g_mpuManage.rxHandle[handle].pDataBufferRx[index]<<8);
                    index++;
                    if(index>=g_mpuManage.rxHandle[handle].dataBufferSize)
                    {
                        index = 0;
                    }
                    crcRx |= g_mpuManage.rxHandle[handle].pDataBufferRx[index];
                    crc =MpuPackGetCrc(packHeader,pRxMsg);
                    if(crcRx==crc)
                    {
                        pRxMsg->aid = packHeader[2];
                        pRxMsg->mid = packHeader[3];
                        pRxMsg->subcommand = packHeader[4];
                        pRxMsg->dataLength = len - (MPU_PROTOCAL_HEADER_LEN+2);
                    }
                    else
                    {
                        ret = MPU_HAL_STATUS_ERR;
                    }
                }
                else
                {
                    ret = MPU_HAL_STATUS_ERR;
                }
            }
            else
            {
                ret = MPU_HAL_STATUS_ERR;
            }
        }
        else
        {
            ret = MPU_HAL_STATUS_ERR;
        }
    }
    else
    {
        ret = MPU_HAL_STATUS_ERR;
    }
    
    return ret;
}

void MpuHalMainUartInit(uint32_t bandrate)
{
    cy_stc_sysint_irq_t         irqCfgUart;
    
    MpuUartDeviceClockInit(bandrate);    
    irqCfgUart.sysIntSrc = scb_4_interrupt_IRQn;
    irqCfgUart.intIdx    = CPUIntIdx4_IRQn;
    irqCfgUart.isEnabled = true;
    Cy_SysInt_InitIRQ(&irqCfgUart);//开启UART接收中断
    Cy_SysInt_SetSystemIrqVector(irqCfgUart.sysIntSrc, MpuUartIntrISR);//Scb_UART_IntrISR:uart中断处理函数
    //
    Cy_SCB_UART_DeInit(MPU_HAL_UART_CHANNEL);
    Cy_SCB_UART_Init(MPU_HAL_UART_CHANNEL, &g_mpuUarConfig, &g_mpuUartDevContext);
    Cy_SCB_UART_RegisterCallback(MPU_HAL_UART_CHANNEL, (scb_uart_handle_events_t)MpuScbUartEvent, &g_mpuUartDevContext);
    Cy_SCB_ClearTxInterrupt(MPU_HAL_UART_CHANNEL, CY_SCB_TX_INTR_LEVEL);
    Cy_SCB_UART_Enable(MPU_HAL_UART_CHANNEL);
    NVIC_SetPriority(CPUIntIdx4_IRQn, 4);
    NVIC_EnableIRQ(CPUIntIdx4_IRQn);
}

void MpuHalTxTask(void *pvParameters)
{
    uint32_t queueData,remain,i;
    uint16_t startAddress;
    uint16_t length;
    //长度2
    //ucountSemaphore = xSemaphoreCreateCounting(3000,0);
    g_mpuUartTxBuffer.txQueueHandle = xQueueCreate( 20, // The number of items the queue can hold.
                              sizeof(uint32_t));
    uint8_t temp[50],j;
    
    while(1)
    {
        if(xQueueReceive(g_mpuUartTxBuffer.txQueueHandle, &queueData, 0xFFFFFFFF)!= pdPASS)
        {
          continue;
        }
      //发送FIFO中的数据;
        i=0;
        startAddress = (queueData>>16)&0xFFFF;
        remain = length = queueData&0xFFFF;         
        while(i<length)
        {
            if(remain>40)
            {
                for(j=0; j<40; j++)
                {                    
                    temp[j] = g_mpuUartTxBuffer.buffer[startAddress++];
                    if(startAddress>=MPU_HAL_TX_BUFFER)
                    {
                        startAddress = 0;
                    }
                    
                }
                Cy_SCB_UART_PutArray(MPU_HAL_UART_CHANNEL, temp, 40);//debug
                vTaskDelay(1);
                i = i+40;
                remain = remain - 40;
            }
            else
            {              
                for(j=0; j<remain; j++)
                {                    
                    temp[j] = g_mpuUartTxBuffer.buffer[startAddress++];
                    if(startAddress>=MPU_HAL_TX_BUFFER)
                    {
                        startAddress = 0;
                    }                    
                }
                Cy_SCB_UART_PutArray(MPU_HAL_UART_CHANNEL, temp, remain);//debug
                i = i+ remain;
                vTaskDelay(1);
            }
        }
    }    
}
